--- a/config.yml
+++ b/config.yml
@@ -12,6 +12,9 @@ bot:
     disable-worlds:
         - 'map1'
         - 'map2'
+warn:
+    every: 3
+    message: '§c§lWHY ARE YOU CHEATING?'
 ban:
-    amount: 5
+    amount: 20
     command: 'ban %PLAYER% Kill aura!'
